# pure-websocket

./: default.nix  pure-websocket.cabal
src/Pure/: WebSocket.hs
src/Pure/WebSocket/: Callbacks.hs  Dispatch.hs  Endpoint.hs  GHC.hs  GHCJS.hs  Handlers.hs  Identify.hs  Internal.hs  Message.hs  Request.hs  TypeRep.hs
src/Pure/WebSocket/API/: Implementation.hs  Interface.hs  ProxyList.hs
src/Pure/WebSocket/Internal/: GHC.hs  GHCJS.hs
