name:                pure-websocket
version:             0.8.0.0
homepage:            purehs.org/doc/pure-websocket
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-websocket.git

library
  exposed-modules:
      Pure.WebSocket.API.Implementation
    , Pure.WebSocket.API.Interface
    , Pure.WebSocket.API.ProxyList
    , Pure.WebSocket.API
    , Pure.WebSocket.Callbacks
    , Pure.WebSocket.Dispatch
    , Pure.WebSocket.Endpoint
    , Pure.WebSocket.Handlers
    , Pure.WebSocket.Internal
    , Pure.WebSocket.Identify
    , Pure.WebSocket.Message
    , Pure.WebSocket.Request
    , Pure.WebSocket.TypeRep
    , Pure.WebSocket
    
  build-depends:
    base,
    bytestring,
    pure-lifted,
    pure-txt,
    pure-json,
    pure-random-pcg,
    pure-time,
    mtl,
    template-haskell,
    unordered-containers

  if (impl(ghcjs))

    build-depends:
      ghcjs-base

    other-modules:
      Pure.WebSocket.Internal.GHCJS

  else

    build-depends:
        websockets      >= 0.11
      , network         >= 2.6
      , io-streams      >= 1.4
      , text
      , HsOpenSSL       >= 0.11.1.1 && < 0.12
      , openssl-streams >= 1.2      && < 1.5

    other-modules:
      Pure.WebSocket.Internal.GHC


  hs-source-dirs:      src
  default-language:    Haskell2010
